Update branches in Makefile

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -16,43 +16,43 @@ else
   BUILD_FOLDER=build-rel
 endif
 
-hpp-fcl_branch=devel
+hpp-fcl_branch=master
 hpp-fcl_repository=${HPP_REPO}
 
-hpp-util_branch=devel
+hpp-util_branch=master
 hpp-util_repository=${HPP_REPO}
 
-hpp-model_branch=devel
+hpp-model_branch=master
 hpp-model_repository=${HPP_REPO}
 
-hpp-model-urdf_branch=devel
+hpp-model-urdf_branch=master
 hpp-model-urdf_repository=${HPP_REPO}
 
-hpp-statistics_branch=devel
+hpp-statistics_branch=version-3
 hpp-statistics_repository=${HPP_REPO}
 
-hpp-core_branch=devel
+hpp-core_branch=version-3
 hpp-core_repository=${HPP_REPO}
 
-hpp-template-corba_branch=devel
+hpp-template-corba_branch=master
 hpp-template-corba_repository=${LAAS_REPO}
 
-hpp-corbaserver_branch=devel
+hpp-corbaserver_branch=version-3
 hpp-corbaserver_repository=${HPP_REPO}
 
 qpOASES_branch=master
 qpOASES_repository=${HPP_REPO}
 
-hpp-constraints_branch=devel
+hpp-constraints_branch=version-3
 hpp-constraints_repository=${HPP_REPO}
 
-hpp-walkgen_branch=devel
+hpp-walkgen_branch=version-3
 hpp-walkgen_repository=${HPP_REPO}
 
-hpp-wholebody-step_branch=devel
+hpp-wholebody-step_branch=version-3
 hpp-wholebody-step_repository=${HPP_REPO}
 
-hpp-wholebody-step-corba_branch=devel
+hpp-wholebody-step-corba_branch=version-3
 hpp-wholebody-step-corba_repository=${HPP_REPO}
 
 test-hpp_branch=devel
@@ -70,16 +70,16 @@ robot_capsule_urdf_repository=${LAAS_REPO}
 robot_model_py_branch=groovy
 robot_model_py_repository=${LAAS_REPO}
 
-hpp-doc_branch=devel
+hpp-doc_branch=version-3
 hpp-doc_repository=${HPP_REPO}
 
-hpp-manipulation_branch=devel
+hpp-manipulation_branch=version-3
 hpp-manipulation_repository=${HPP_REPO}
 
-hpp-manipulation-urdf_branch=devel
+hpp-manipulation-urdf_branch=version-3
 hpp-manipulation-urdf_repository=${HPP_REPO}
 
-hpp-manipulation-corba_branch=devel
+hpp-manipulation-corba_branch=version-3
 hpp-manipulation-corba_repository=${HPP_REPO}
 
 robot_state_chain_publisher_branch=master
@@ -88,7 +88,7 @@ robot_state_chain_publisher_repository=${HPP_REPO}
 iai_maps_branch=master
 iai_maps_repository=${HPP_REPO}
 
-hpp_tutorial_branch=devel
+hpp_tutorial_branch=version-3
 hpp_tutorial_repository=${HPP_REPO}
 
 hpp_benchmark_branch=master
@@ -103,7 +103,7 @@ gepetto-viewer_repository=${HPP_REPO}
 gepetto-viewer-corba_branch=devel
 gepetto-viewer-corba_repository=${HPP_REPO}
 
-hpp-gepetto-viewer_branch=devel
+hpp-gepetto-viewer_branch=version-3
 hpp-gepetto-viewer_repository=${HPP_REPO}
 
 pythonqt_branch=patched-5
