Deactivate dependency between hpp-manipulation and hpp-wholebody-step

--- a/doc/Makefile
+++ b/doc/Makefile
@@ -75,6 +75,7 @@ hpp-doc_repository=${HPP_REPO}
 
 hpp-manipulation_branch=version-3
 hpp-manipulation_repository=${HPP_REPO}
+hpp-manipulation_extra_flags= -DHPP_MANIPULATION_HAS_WHOLEBODY_STEP=OFF
 
 hpp-manipulation-urdf_branch=version-3
 hpp-manipulation-urdf_repository=${HPP_REPO}
