--- a/doc/Makefile
+++ b/doc/Makefile
@@ -211,9 +211,13 @@ update:
 	: # Do nothing else
 
 %.confthis:%.checkout
-	mkdir -p ${SRC_DIR}/$(@:.confthis=)/${BUILD_FOLDER}; \
-	cd ${SRC_DIR}/$(@:.confthis=)/${BUILD_FOLDER}; \
-	cmake -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR} -DCMAKE_INSTALL_LIBDIR=lib -DCMAKE_BUILD_TYPE=${BUILD_TYPE} \ -DCMAKE_CXX_FLAGS_RELWITHDEBINFO="-g -O3 -DNDEBUG" ${$(@:.confthis=)_extra_flags} ..
+	if [ -d ${SRC_DIR}/$(@:.confthis=) ]; then \
+		mkdir -p ${SRC_DIR}/$(@:.confthis=)/${BUILD_FOLDER}; \
+		cd ${SRC_DIR}/$(@:.confthis=)/${BUILD_FOLDER}; \
+		cmake -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR} -DCMAKE_INSTALL_LIBDIR=lib -DCMAKE_BUILD_TYPE=${BUILD_TYPE} \ -DCMAKE_CXX_FLAGS_RELWITHDEBINFO="-g -O3 -DNDEBUG" ${$(@:.confthis=)_extra_flags} ..; \
+	else \
+		echo "Package $(@:.confthis=) is not checked out."; \
+	fi
 
 %.install:%.configure
 	${MAKE} -C ${SRC_DIR}/$(@:.install=)/${BUILD_FOLDER}; \
