--- a/doc/Makefile
+++ b/doc/Makefile
@@ -12,12 +12,20 @@ SOT_REPO=https://github.com/stack-of-tasks
 SRC_DIR=${DEVEL_DIR}/src
 INSTALL_DIR=${DEVEL_DIR}/install
 
+# Whether to compute humanoid specific part
+HUMANOID=TRUE
+
 BUILD_TYPE=Release
 ifeq (${BUILD_TYPE},Debug)
   BUILD_FOLDER=build
 else
   BUILD_FOLDER=build-rel
 endif
+
+WGET=wget --quiet
+UNZIP=unzip -qq
+TAR=tar
+GIT_QUIET=--quiet
 
 hpp-fcl_branch=master
 hpp-fcl_repository=${HPP_REPO}
@@ -44,6 +52,7 @@ hpp-statistics_repository=${HPP_REPO}
 
 hpp-core_branch=master
 hpp-core_repository=${HPP_REPO}
+hpp-core_extra_flags=-DRUN_TESTS=FALSE
 
 hpp-template-corba_branch=master
 hpp-template-corba_repository=${LAAS_REPO}
@@ -121,11 +130,21 @@ gepetto-viewer-corba_repository=${HPP_REPO}
 hpp-gepetto-viewer_branch=master
 hpp-gepetto-viewer_repository=${HPP_REPO}
 
-qgv_branch=master
+pythonqt_branch=patched-5
+pythonqt_repository=${HPP_REPO}
+pythonqt_extra_flags= -DPythonQt_Wrap_QtAll=ON -DPythonQt_Extensions=ON
+
+oqgv_branch=master
 qgv_repository=${HPP_REPO}
 
 hpp-environments_branch=master
 hpp-environments_repository=${HPP_REPO}
+
+universal_robot_branch=indigo-devel
+universal_robot_repository=${HPP_REPO}
+
+hpp_universal_robot_branch=devel
+hpp_universal_robot_repository=${FLORENT_REPO}
 
 hpp-baxter_branch=master
 hpp-baxter_repository=${HPP_REPO}
@@ -134,13 +153,21 @@ OpenSceneGraph-dae-plugin_extra_flags= -DCOLLADA_DYNAMIC_LIBRARY=${INSTALL_DIR}/
 
 doxygen-Release_1_8_10_extra_flags= -DCMAKE_BUILD_TYPE=Release
 
-roboptim-core-3.1_extra_flags= -DCMAKE_BUILD_TYPE=Release
+roboptim-core-3.1_extra_flags= -DCMAKE_BUILD_TYPE=Release -DCXX_DISABLE_WERROR=ON
 
-roboptim-trajectory-3.1_extra_flags= -DCMAKE_BUILD_TYPE=Release
+roboptim-trajectory-3.1_extra_flags= -DCMAKE_BUILD_TYPE=Release -DCXX_DISABLE_WERROR=ON
 
 qpOASES_extra_flags= -DCMAKE_BUILD_TYPE=Release
 
-all: doxygen-Release_1_8_10.install hpp_tutorial.install \
+ifeq (${HUMANOID}, TRUE)
+  hpp-manipulation_extra_flags= -DHPP_MANIPULATION_HAS_WHOLEBODY=TRUE
+  hpp-manipulation-corba_extra_flags-DHPP_MANIPULATION_HAS_WHOLEBODY=TRUE
+else
+  hpp-manipulation_extra_flags= -DHPP_MANIPULATION_HAS_WHOLEBODY=FALSE
+  hpp-manipulation-corba_extra_flags-DHPP_MANIPULATION_HAS_WHOLEBODY=FALSE
+endif
+
+all: doxygen-1.8.10.install hpp_tutorial.install \
 	hpp-manipulation-corba.install 	hpp-gepetto-viewer.install
 	${MAKE} hpp-doc.install
 
@@ -149,7 +176,7 @@ hrp2: test-hpp.install
 
 hpp-fcl.configure.dep: eigen3.install hpp-fcl.checkout
 eigen3.configure.dep: eigen3.checkout
-doxygen-Release_1_8_10.configure.dep: doxygen-Release_1_8_10.checkout
+doxygen-1.8.10.configure.dep: doxygen-1.8.10.checkout
 roboptim-core-3.1.configure.dep: eigen3.install roboptim-core-3.1.checkout
 roboptim-trajectory-3.1.configure.dep: roboptim-core-3.1.install \
 	roboptim-trajectory-3.1.checkout
@@ -162,16 +189,16 @@ hpp-model-urdf.configure.dep: hpp-model.install hpp-model-urdf.checkout
 pinocchio.configure.dep: eigen3.install hpp-fcl.install pinocchio.checkout
 hpp-pinocchio.configure.dep: pinocchio.install hpp-util.install \
 	hpp-pinocchio.checkout
-hpp-statistics.configure.dep: hpp-statistics.checkout
+hpp-statistics.configure.dep: hpp-util.install hpp-statistics.checkout
 hpp-core.configure.dep: hpp-constraints.install hpp-statistics.install \
 	hpp-core.checkout
 qpOASES.configure.dep: qpOASES.checkout
 hpp-constraints.configure.dep: qpOASES.install \
-	hpp-pinocchio.install hpp-constraints.checkout
+	hpp-pinocchio.install hpp-statistics.install hpp-constraints.checkout
 hpp-wholebody-step.configure.dep: hpp-constraints.install hpp-walkgen.install \
 	hpp-wholebody-step.checkout
 hpp-manipulation.configure.dep: hpp-core.install hpp-constraints.install \
-	hpp-wholebody-step.install hpp-manipulation.checkout
+	hpp-manipulation.checkout
 hpp-manipulation-urdf.configure.dep:hpp-manipulation.install \
 	hpp-manipulation-urdf.checkout
 hpp-corbaserver.configure.dep: hpp-core.install \
@@ -180,9 +207,17 @@ hpp-wholebody-step-corba.configure.dep: hpp-corbaserver.install \
 	hpp-wholebody-step.install hpp-template-corba.install \
 	hpp-wholebody-step-corba.checkout
 hpp-template-corba.configure.dep: hpp-util.install hpp-template-corba.checkout
+qgv.configure.dep: qgv.checkout
+pythonqt.configure.dep: pythonqt.checkout
+ifeq (${HUMANOID}, TRUE)
 hpp-manipulation-corba.configure.dep: hpp-manipulation-urdf.install \
 	hpp-wholebody-step-corba.install hpp-manipulation.install \
 	hpp-manipulation-corba.checkout
+else
+hpp-manipulation-corba.configure.dep: hpp-manipulation-urdf.install \
+	hpp-manipulation.install \
+	hpp-manipulation-corba.checkout
+endif
 robot_model_py.configure.dep: robot_model_py.checkout
 robot_capsule_urdf.configure.dep: robot_model_py.install \
 	robot_capsule_urdf.checkout
@@ -206,8 +241,13 @@ gepetto-viewer-corba.configure.dep: gepetto-viewer.install \
 hpp-gepetto-viewer.configure.dep: gepetto-viewer-corba.install \
 	hpp-corbaserver.install \
 	hpp-gepetto-viewer.checkout
-qgv.configure.dep: qgv.checkout
+universal_robot.configure.dep: universal_robot.install \
+	universal_robot.checkout
+hpp_universal_robot.configure.dep: universal_robot.install \
+	hpp_universal_robot.checkout
+hpp-environments.configure.dep: hpp-environments.checkout
 hpp-baxter.configure.dep: hpp-corbaserver.install hpp-baxter.checkout
+pythonqt.configure.dep: pythonqt.checkout
 
 status:
 	@for child_dir in $$(ls ${SRC_DIR}); do \
@@ -228,7 +268,10 @@ log:
 	done
 
 update:
-	for d in hpp-util hpp-pinocchio hpp-core hpp-template-corba hpp-corbaserver hpp-constraints hpp-wholebody-step hpp-wholebody-step-corba hpp-doc ; do \
+	for d in hpp-util hpp-pinocchio hpp-constraints hpp-core \
+		hpp-template-corba hpp-corbaserver hpp-constraints \
+		hpp-manipulation hpp-manipulation-urdf hpp-manipulation-corba \
+		hpp-doc ; do \
 	echo "Updating $$d";\
 	${MAKE} $$d.update; done
 
@@ -236,7 +279,7 @@ update:
 	if [ -d $(@:.checkout=) ]; then \
 		echo "$(@:.checkout=) already checkout out."; \
 	else \
-		git clone --recursive -b ${$(@:.checkout=)_branch} ${$(@:.checkout=)_repository}/$(@:.checkout=); \
+		git clone ${GIT_QUIET} --recursive -b ${$(@:.checkout=)_branch} ${$(@:.checkout=)_repository}/$(@:.checkout=); \
 	fi \
 
 %.update:
@@ -250,19 +293,19 @@ update:
 	git branch -D bce46g;\
 	git submodule update
 
-%.configure:%.configure.dep %.confthis
-	: # Do nothing else
+%.configure: %.configure.dep
+	${MAKE} $(@:.configure=).configure_nodep
 
-%.confthis:%.checkout
-	mkdir -p ${SRC_DIR}/$(@:.confthis=)/${BUILD_FOLDER}; \
-	cd ${SRC_DIR}/$(@:.confthis=)/${BUILD_FOLDER}; \
-	cmake -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR} -DCMAKE_INSTALL_LIBDIR=lib -DCMAKE_BUILD_TYPE=${BUILD_TYPE} \ -DCMAKE_CXX_FLAGS_RELWITHDEBINFO="-g -O3 -DNDEBUG" ${$(@:.confthis=)_extra_flags} ..
+%.configure_nodep:%.checkout
+	mkdir -p ${SRC_DIR}/$(@:.configure_nodep=)/${BUILD_FOLDER}; \
+	cd ${SRC_DIR}/$(@:.configure_nodep=)/${BUILD_FOLDER}; \
+	cmake -DCMAKE_INSTALL_PREFIX=${INSTALL_DIR} -DCMAKE_INSTALL_LIBDIR=lib -DCMAKE_BUILD_TYPE=${BUILD_TYPE} \ -DCMAKE_CXX_FLAGS_RELWITHDEBINFO="-g -O3 -DNDEBUG" ${$(@:.configure_nodep=)_extra_flags} ..
 
 %.install:%.configure
 	${MAKE} -C ${SRC_DIR}/$(@:.install=)/${BUILD_FOLDER} install
 
-%.instthis:%.confthis
-	${MAKE} -C ${SRC_DIR}/$(@:.instthis=)/${BUILD_FOLDER} install
+%.install_nodep:%.configure_nodep
+	${MAKE} -C ${SRC_DIR}/$(@:.install_nodep=)/${BUILD_FOLDER} install
 
 %.uninstall:
 	${MAKE} -C ${SRC_DIR}/$(@:.uninstall=)/${BUILD_FOLDER} uninstall
@@ -295,7 +338,7 @@ eigen3.checkout:
 	if [ -d $(@:.checkout=) ]; then \
 		echo "$(@:.checkout=) already checkout out."; \
 	else \
-		wget -O - "http://bitbucket.org/eigen/eigen/get/3.2.4.tar.bz2" | tar -xj; \
+		${WGET} -O - "http://bitbucket.org/eigen/eigen/get/3.2.4.tar.bz2" | ${TAR} -xj; \
 		mv eigen-eigen-10219c95fe65 eigen3;\
 	fi
 
@@ -309,22 +352,30 @@ roboptim-core-3.1.checkout:
 	if [ -d $(@:.checkout=) ]; then \
 		echo "$(@:.checkout=) already checkout out."; \
 	else \
-		wget -O - "https://github.com/roboptim/roboptim-core/releases/download/v3.1/roboptim-core-3.1.tar.bz2" | tar -xj; \
+		${WGET} -O - "https://github.com/roboptim/roboptim-core/releases/download/v3.1/roboptim-core-3.1.tar.bz2" | ${TAR} -xj; \
 	fi
 
 roboptim-trajectory-3.1.checkout:
 	if [ -d $(@:.checkout=) ]; then \
 		echo "$(@:.checkout=) already checkout out."; \
 	else \
-	        wget -O - "https://github.com/roboptim/roboptim-trajectory/releases/download/v3.1/roboptim-trajectory-3.1.tar.bz2" | tar -xj; \
+	  ${WGET} -O - "https://github.com/roboptim/roboptim-trajectory/releases/download/v3.1/roboptim-trajectory-3.1.tar.bz2" | ${TAR} -xj; \
 	fi
 
-doxygen-Release_1_8_10.checkout:
+doxygen-1.8.10.checkout:
 	if [ -d $(@:.checkout=) ]; then \
 		echo "$(@:.checkout=) already checkout out."; \
 	else \
-		wget -O - "https://github.com/doxygen/doxygen/archive/Release_1_8_10.tar.gz" | tar -xz;\
+	  ${WGET} -O - "ftp://ftp.stack.nl/pub/users/dimitri/doxygen-1.8.10.linux.bin.tar.gz" | ${TAR} -xz;\
 	fi
+
+doxygen-1.8.10.configure: doxygen-1.8.10.configure.dep
+	@ :
+
+doxygen-1.8.10.install: doxygen-1.8.10.configure
+	cd ${SRC_DIR}/doxygen-1.8.10;\
+  mkdir -p ${DEVEL_DIR}/install/bin;\
+  install --mode=755 -t ${DEVEL_DIR}/install/bin bin/doxygen
 
 hrp2.configure: hrp2.configure.dep
 	. ${INSTALL_DIR}/setup.sh; \
@@ -349,3 +400,16 @@ robot_model_py.configure: robot_model_py.configure.dep
 robot_model_py.install: robot_model_py.configure
 	${MAKE} -C ${SRC_DIR}/$(@:.install=)/xml_reflection/${BUILD_FOLDER} install; \
 	${MAKE} -C ${SRC_DIR}/$(@:.install=)/urdf_parser_py/${BUILD_FOLDER} install;
+
+universal_robot.configure_nodep:
+	mkdir -p ${SRC_DIR}/$(@:.configure_nodep=)/ur_description/${BUILD_FOLDER}; \
+	cd ${SRC_DIR}/$(@:.configure_nodep=)/ur_description/${BUILD_FOLDER}; \
+	cmake -DCMAKE_INSTALL_PREFIX=${DEVEL_DIR}/install -DCMAKE_INSTALL_LIBDIR=lib -DCMAKE_BUILD_TYPE=${BUILD_TYPE} -DCMAKE_CXX_FLAGS_RELWITHDEBINFO="-g -O3 -DNDEBUG" ${$(@:.configure_nodep=)_extra_flags} ..
+
+universal_robot.install_nodep:universal_robot.configure_nodep
+	cd ${SRC_DIR}/$(@:.install_nodep=)/ur_description/${BUILD_FOLDER};\
+	make install
+
+universal_robot.install:universal_robot.configure
+	cd ${SRC_DIR}/$(@:.install=)/ur_description/${BUILD_FOLDER};\
+	make install
