--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -4,7 +4,5 @@ variables:
 
 build:
     image: eur0c.laas.fr:4567/humanoid-path-planner/hpp-doc/master:14.04
-    script:
-        - cd script
-        - ./auto-install-hpp.sh
+    script: ./script/auto-install-hpp.sh
 
